Added window persistence.  Changed the project file format to XML, changed the settings file format to XML.  Added confirmation on project close.  Deleted some unused functions.  Changed the way the Category iterator works.

--- a/templates/settings.xml
+++ b/templates/settings.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
-<project version="1.0">
+<settings version="1.0">
 {%- for key, value in category recursive %}
   {%- if value.children %}
     <category name="{{key}}">
         {{- loop(value)}}
     </category>
   {% else %}
-        <item name="{{key|escape}}"> 
+        <item name="{{key|escape}}">
         {{value.__repr__()|escape}}
         </item>
   {%- endif %}
 {%- endfor -%}
-</project>
+</settings>
